--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
@@ -20,8 +21,16 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@azure/ai-form-recognizer": "^4.0.0-beta.2",
+    "@azure/identity": "^2.0.2",
+    "airtable": "^0.11.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "node-fetch": "^3.2.0",
+    "plaid": "^9.10.1",
+    "react-plaid-link": "^3.3.0"
   }
 }
