--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/auth0": "^2.34.14",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
@@ -21,16 +22,18 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@azure/ai-form-recognizer": "^4.0.0-beta.2",
-    "@azure/identity": "^2.0.2",
+    "@azure/ai-form-recognizer": "^4.0.0-beta.3",
+    "@azure/identity": "^2.0.4",
     "airtable": "^0.11.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-oauth2-jwt-bearer": "^1.1.0",
     "express-validator": "^6.14.0",
+    "mongodb": "^4.4.1",
     "multer": "^1.4.4",
     "node-fetch": "^3.2.0",
-    "plaid": "^9.10.1",
+    "plaid": "^9.12.0",
     "react-plaid-link": "^3.3.0"
   }
 }
