--- a/package.json
+++ b/package.json
@@ -2,24 +2,31 @@
   "name": "duewell-api-ts",
   "version": "1.0.0",
   "description": "",
+  "author": {
+    "name": "Alec Helmturner",
+    "email": "alec@alecvision.com"
+  },
   "main": "dist/app.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
+    "dev": "ts-node-dev src/app.ts",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/auth0": "^2.34.14",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.8.0",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "@azure/ai-form-recognizer": "^4.0.0-beta.3",
@@ -27,7 +34,7 @@
     "airtable": "^0.11.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "express-oauth2-jwt-bearer": "^1.1.0",
     "express-validator": "^6.14.0",
     "mongodb": "^4.4.1",
